# python-client

./: .gitignore  .python-version  .readthedocs.yaml  1diagnostic_dont_ship.py  2diagnostic_dont_ship.py  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  circle.yml  diagnostic_dont_ship.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.buildkite/: pipeline.yml  test.sh
docs/: Makefile  make.bat
docs/source/: api.rst  catalog.rst  client.rst  conf.py  exceptions.rst  exports.rst  index.rst  layer.rst  license.rst  metadata.rst  permission.rst  publishing.rst  query.rst  set.rst  sources.rst  token.rst  user.rst
koordinates/: __init__.py  api.py  base.py  catalog.py  client.py  client_tester_dont_ship.py  connection.py  diagnostic_dont_ship.py  exceptions.py  exports.py  json_diag_dont_ship.py  koordexceptions.py  layer.py  layers.py  licenses.py  metadata.py  mixins.py  permissions.py  publish.py  publishing.py  publishrequest.py  set.py  sets.py  sources.py  tokens.py  users.py  utils.py  will_pass_flake8.py
koordinates/tests/: __init__.py  canned_responses_for_tests.py  test_koordinates.py  (+10 more)
koordinates_api_client/: will_break_flake8.py
tests/: canned_responses_for_tests.py  test_catalog.py  test_client.py  test_exports.py  test_koordinates.py  test_licenses.py  test_metadata.py  test_models.py  test_non_dynamic_instantiation.py  test_permissions.py  test_publish.py  test_queries.py  test_redirects.py  test_sets.py  test_sources.py  test_tokens.py  test_url_handling.py  test_utils.py
(+21 files in other folders)
